--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-V8B3CJF\\SQLEXPRESS;Initial Catalog=finshark;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": ""
   },
 
   "Logging": {
